--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "connectkit": "^1.8.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@tanstack/react-query": "^5.51.23",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@web3modal/wagmi": "^5.0.11",
+    "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
+    "dotenv": "^16.4.5",
+    "ethers": "^5",
+    "ffjavascript": "^0.3.0",
+    "fixed-merkle-tree": "^0.6.0",
+    "react-spinners": "^0.14.1",
+    "snarkjs": "0.7.4",
+    "viem": "^2.19.4",
+    "vite": "^5.4.0",
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
