--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "connectkit": "^1.8.2",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@tanstack/react-query": "^5.51.23",
     "@vitejs/plugin-react": "^4.3.1",
     "@web3modal/wagmi": "^5.0.11",
+    "blake-hash": "^2.0.0",
+    "buffer": "^6.0.3",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
+    "connectkit": "^1.8.2",
     "dotenv": "^16.4.5",
     "ethers": "^5",
     "ffjavascript": "^0.3.0",
     "fixed-merkle-tree": "^0.6.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-spinners": "^0.14.1",
     "snarkjs": "0.7.4",
     "viem": "^2.19.4",
@@ -30,6 +32,7 @@
     "wagmi": "^2.12.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -43,6 +46,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
