--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "@tanstack/react-query": "^5.51.23",
     "@vitejs/plugin-react": "^4.3.1",
     "@web3modal/wagmi": "^5.0.11",
