--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.8",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.51.23",
     "@vitejs/plugin-react": "^4.3.1",
     "@web3modal/wagmi": "^5.0.11",
@@ -23,6 +23,7 @@
     "ethers": "^5",
     "ffjavascript": "^0.3.0",
     "fixed-merkle-tree": "^0.6.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
